# informative_input_design

./: README.md  dynamics.py  dynamics_henon.py  helper_funcs.py  main.py  method.py  pyproject.toml
