[tool.poetry]
name = "informative-input-design"
version = "0.1.0"
description = ""
authors = ["Alexandros Tzikas <33734693+alextzik@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.1"
cvxpy = "^1.6.0"
torch = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
